src/components/body/transactions/transactionList.css
:root {
  --main-text-color: #141c3a;
  --light-blue: #e3e6ff;
  --light-brown-hsl-codes: 40 21% 53%;
}

/* -------------------------------------------- transaction records ---------------------*/

.transaction-list-section {
  padding: 12px 10.5px 11px 16px;
  border-radius: 6px;
  border: solid 1px #141c3a;
  background-color: #ffffff;
  font-size: 16px;
  font-weight: bold;
  overflow: hidden;
}

.transaction-list-container {
  padding: 2%;
  padding-bottom: max(2rem, 2%);
  outline: 1px solid black;
  border-radius: 5px;
  overflow-x: scroll;
}

.budget.transaction-list-container {
  margin-bottom: 2rem;
}

/* .transaction-list-container.empty thead.headers {
  display: none;
  border: none;
} */

.transaction-list-container h3 {
  font-size: clamp(16px, 3.5vw, 2.4rem);
}

.transaction-list {
  list-style: none;
  padding: 0;
  font-weight: normal;
  /* font-style: italic; */
}

/* --------------------------------------------------------------- transaction list table settings ---*/

table.transaction-list {
  width: 100%;
  font-size: 1.3rem;
}


table.transaction-list thead tr {
  padding-bottom: 0.2rem;
}

table.transaction-list tr {
  border-bottom: 1px solid black;
  /* box-shadow: 0px 1px 0px 0px rgb(0, 0, 0); */
  display: flex;
  align-items: center;
  justify-content: space-between;
  column-gap: 5rem;
}

@media screen and (max-width: 600px) {
  table.transaction-list tr  {
    padding-top: 1rem;
    padding-bottom: 2rem;
  }
}

table.transaction-list tbody tr:hover {
  background-color: var(--light-blue);
}

table.transaction-list td {
  display: flex;
  justify-content: center;
  padding: 0.3rem;
  padding-bottom: 0;  
  margin-bottom: 0.15rem;
  margin-top: 1rem;
}

td.amount,
td.budget-balance,
td.expense-history,
td.budget-history {
  justify-content: center;
}

table.transaction-list td.description,
table.transaction-list td.note {
  justify-content: flex-start;
}

.t-header.description {
  /* without the padding-right setting below, as device screens would get smaller, all transList table headings would get misaligned from the child columns */
  padding-right: 5rem;
}

td.description {
  width: 30%;
}

td.amount,
td.budget-balance,
td.expense-history,
td.budget-history,
td.note {
  width: 10%;
}

td.delete {
  align-self: baseline;
  width: 5%;
}



/* --------------------------------------------------------------- general styles for TransList table elements */



.transaction-list .amount-positive {
  color: green;
  font-weight: 600;
  font-style: normal;
}

.transaction-list .amount-negative,
.transaction-list .amount-expense {
  color: red;
  font-weight: 600;
  font-style: normal;
}

.transaction-list .delete {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  border: none;
}



.transaction-list .delete button {
  /* margin-left: auto; */
  /* background-color: lightblue; */
  border: solid 1px #141c3a;
  border-radius: 5px;
  height: 2rem;
  width: 2rem;
  padding: 10px 8px 8px 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  font-weight: bold;
  transition: all 120ms;
}

.transaction-list .delete button:hover {
  transform: scale(1.3);
}

.transaction-list .delete button:hover,
.transaction-list .delete button:focus {
  color: white;
  background-color: red;
}

